- [DS-715] Unification of license treatment in xmlui and jspui

(Claudia Juergen, Andreas Schwander)
- [DS-709] ArrayIndexOutOfBoundsException when editing group roles

(Erick Rocha Fonseca, Claudia Juergen)
- [DS-563] Brazilian Portuguese (pt_BR) translation for XML-UI 1.6.2

(Peter Dietz)
- [DS-192] Bitstreams should be returned ordered
- [DS-549] Added <a name> anchors in XMLUI

(Stuart Lewis, Christophe Dupriez)
- [DS-686] Incorrect use of UTF8 in DSpaceCSV

(Stuart Lewis)
- [DS-467] Consider making the JSPUI styles.css.jsp a static file
- [DS-550] Upgrade to latest Google Analytics tracking code
- [DS-632] Batch Metadata Import needs to validate metadata fields specified in CSVs
- [DS-646] Remove /bin scripts (replaced by 'dspace' command)
- [DS-713] dspace.log only logs remoteAddr, needs extending to include X-Forwarded-For
- [DS-735] Allow IPAuthentication to work with proxies (examine X-Forwarded-For header)

(Graham Triggs)
- [DS-698] Clear primary_bitstream_id references when deleting a bitstream
- [DS-696] Reduce cost of browse index pruning
- [DS-694] Add inner class to Item for more efficient metadata handling
- [DS-695] Convert DatabaseManager to use DataSource, allow for JNDI
- [DS-697] Allow media filter plugins to register their input formats directly
- [DS-732] Browse performance improvements
- [DS-733] Load testing utilities
- [DS-734] Improve database efficiency
- [DS-736] ItemImport usage and efficiency improvements
- [DS-739] Lucene indexing efficiency improvements

(Graham Triggs, Mark Wood)
- [DS-707] General improvements to performance, bug fixes and style

(Ben Bosman)
- [DS-703] Making the OAI max amount of records configurable
- [DS-603] Including a most used item list on the home page
- [DS-615] Optimize solr performance with solr.optimize and autocommit
- [DS-706] Alternative to dri2xhtml, with the goal to be more developer-friendly
- [DS-710] New Base Theme For DSpace 1.7.0
- [DS-711] Discovery release for XMLUI
